--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
     <script src="assets/js/app.js"></script>
 </head>
 <body>
-    <div class="banner">
+    <!-- <div class="banner">
         <div class="header">Coming Soon</div>
         <br />
         <div class="content">I am currently working on finalising the basic layout for the site. The site will be updated soon with more details.</div>
+    </div> -->
+    <div class="quote-box">
+        <div class="quote-text">
+            You are the master of your thought, the molder of your character the maker and shaker of your condition, environment and destiny. Man is buffeted by circumstances as long as he believes himself to be the creature of outside conditions. But when he realises that he is a creative power and that he may command the hidden soil and seeds of his being out of which circumstances grow, he then becomes the rightful master of himself.
+        </div>
+        <div class="author-text">
+            <span>&mdash; James Allen,</span>
+            <span class="source">As a Man Thinketh</span>
+        </div>
     </div>
 </body>
 </html>
